--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -18,12 +18,14 @@
     <% }) %>
     </ul>
 
-    <h2>Things left to do: <%= left %></h2>
+    <h2><%= user.displayName %> has <%= left %> things left to do</h2>
 
     <form action="/todos/createTodo" method="post">
         <input type="text" placeholder="Enter Todo Item" name="todoItem">
         <input type="submit">
     </form>
+
+    <a href="/auth/logout">Log out</a>
 
     <script src="js/main.js"></script>
 </body>
