--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Create a Todo List By Clicking The Button Below</h1>
-    <a href="/todos"> New Todo List</a>
+    <a href="/auth/login"> New Todo List</a>
 </body>
 </html>
